# rtic-strategy-pattern

./: .gitignore  .gitinore  Cargo.toml  README.md  memory.x
.cargo/: config
src/: main.rs
